--- a/Mirko/Mirko.Shared/Resources/Converters.xaml
+++ b/Mirko/Mirko.Shared/Resources/Converters.xaml
@@ -33,5 +33,7 @@
     <converters:AuthorIndicator x:Key="AuthorIndicator" />
     <converters:ProfileAppBar x:Key="ProfileAppBar" />
     <converters:ObjectToEntryVM x:Key="ObjectToEntryVM" />
+    <converters:MyEntriesTypeIndexConverter x:Key="MyEntriesTypeIndexConverter" />
+    <converters:MyEntriesTypeStringConverter x:Key="MyEntriesTypeStringConverter" />
 
 </ResourceDictionary>
